Using new colors
They're atrocious, but don't worry, that's why this is in a separate branch. We're going to go through these one by one. For now, we just need to get back to compiling with the new colors.

--- a/scss/components/content/_diff.scss
+++ b/scss/components/content/_diff.scss
@@ -29,15 +29,15 @@ table.diff {
       padding-bottom: 1.618em;
 
       &.current {
-        color: $brown13;
+        color: $yellow-dark;
       }
     }
   }
 
   tbody th {
-    background: $brown16;
+    background: $yellow-light;
     border: 0;
-    color: $brown;
+    color: $yellow-dark;
   }
 
   tbody td {
