--- a/scss/components/content/_infobox.scss
+++ b/scss/components/content/_infobox.scss
@@ -7,12 +7,12 @@
   }
 
   dt {
-    background: $brown13;
+    background: $yellow;
     font-weight: bold;
   }
 
   dd {
-    background: $brown16;
+    background: $yellow-light;
     margin-bottom: 0.382em;
   }
 
