--- a/scss/components/content/_like-unlike.scss
+++ b/scss/components/content/_like-unlike.scss
@@ -1,7 +1,7 @@
 .likes {
-  background: $brown16;
+  background: $yellow-light;
   border-radius: $border-radius-long;
-  color: $brown;
+  color: $yellow-dark;
   font-family: 'Fontin Sans';
   margin: 1.618em -1em;
   padding: 0.618em 1em;
@@ -12,7 +12,7 @@
   }
 
   a {
-    color: $brown;
+    color: $yellow-dark;
     display: inline-block;
     padding-right: 0.618em;
 
