--- a/scss/components/content/_map.scss
+++ b/scss/components/content/_map.scss
@@ -44,7 +44,7 @@
 
     ul.continents:before,
     ul.oceans:before {
-      color: $white13;
+      color: $white;
       display: block;
       font-family: 'Fontin Sans Small Caps';
       margin-bottom: 0.618em;
