--- a/scss/components/form/_textarea.scss
+++ b/scss/components/form/_textarea.scss
@@ -4,7 +4,7 @@ textarea {
 }
 
 textarea + .char-count {
-  color: $brown23;
+  color: $yellow-dark;
   font-family: 'Fontin Sans';
   margin-top: -0.618em;
   text-align: right;
