--- a/scss/components/media/_figure.scss
+++ b/scss/components/media/_figure.scss
@@ -3,7 +3,7 @@ figure {
 }
 
 figcaption {
-  border-top: 1px solid $brown13;
+  border-top: 1px solid $yellow-light;
   font-family: 'Fontin Sans';
   margin-top: 0.618em;
   padding-top: 0.618em;
