--- a/scss/components/meta/_component.scss
+++ b/scss/components/meta/_component.scss
@@ -9,7 +9,7 @@ section.component {
 
     &:before {
       @extend %h3;
-      color: $black13;
+      color: $gray;
       content: 'Preview';
       display: block;
     }
