--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -87,7 +87,7 @@ nav.site {
 
 footer {
   @extend %text;
-  background: $brown;
+  background: $yellow-dark;
   color: $white;
   margin-top: calc(0.618em + 30px);
   padding-bottom: 11.1em;
