--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -34,7 +34,7 @@ h5, .h5like { @extend %h5; }
 
 .header-anchor,
 .header-anchor:visited {
-  color: $brown16;
+  color: $yellow-dark;
   float: left;
   margin-left: -1em;
   text-decoration: none;
