--- a/scss/components/content/_create.scss
+++ b/scss/components/content/_create.scss
@@ -17,7 +17,7 @@ section.create {
   }
 
   @media (min-width: 60em) {
-    background: $brown16 url(#{$img}/create.png) no-repeat bottom right;
+    background: $yellow-dark url(#{$img}/create.png) no-repeat bottom right;
     background-size: contain;
     padding-right: 25%;
 
