--- a/scss/components/html/_blockquote.scss
+++ b/scss/components/html/_blockquote.scss
@@ -17,7 +17,7 @@ blockquote {
   }
 
   &:before {
-    color: $brown16;
+    color: $yellow-dark;
     content: '“';
     font-size: 4.236em;
     left: -0.1em;
