Basic swatch styling

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -90,5 +90,5 @@
 
   @import 'components/meta/component';
   @import 'components/meta/details-markup';
-  @import 'components/meta/palette';
+  @import 'components/meta/swatch';
 }
